@@ -29,6 +29,7 @@ Analyzer::Analyzer(int it,Filetype p):info(0),remaining(0),typefound(false),last
     AddParser( new base64_2Parser());  // multiline
     AddParser( new MODParser());
     AddParser( new sgiParser());
+    AddParser( new TGAParser());
     
     emptyType.start=0;
     emptyType.end=0;
