@@ -1,6 +1,7 @@
 v114
     -Add pdf lzw, gif, dBase, pdf bitmap, aiff, ascii85,
-     base64 (stream), base64 (multiline), mod, sgi/rgb parser.
+     base64 (stream), base64 (multiline), mod, sgi/rgb,
+     tga parser.
     -Change Analyzer and Codec so that parent type is passed on in recursion.
     -Move LZSS to separate header
     -Disable zlib parser if parent type is ZLIB
